1-iteration auto Учимся писать тесты