@@ -11,17 +11,17 @@ import java.util.List;
 public class PremiumPageTest extends BaseTest {
 
     private static final  String PREMIUM_URL = "https://online.mtsdengi-test.mbrd.ru/premium";
-    private static final List<String> LEVEL_PAGE_NAME = Arrays.asList("Уровень", "уровень", "Private", "private");
+    private static final List<String> LEVEL_PAGE_NAME = List.of("Уровень", "уровень", "Private", "private");
 
     @Test(priority = 1)
-    public void testCheckLevelPageHeaderName() {
+    public void testCheckLevelPageHeader() {
         HomePage homePage = new HomePage(driverContainer);
         PremiumPage premiumPage = homePage.openPremiumPage();
 
         boolean found = false;
 
-        for(String check : LEVEL_PAGE_NAME) {
-            if(premiumPage.checkLevelPageHeaderName().contains(check)) {
+        for(String i : LEVEL_PAGE_NAME) {
+            if(premiumPage.checkLevelPageHeaderName().contains(i)) {
                 found = true;
                 break;
             }
@@ -30,33 +30,33 @@ public class PremiumPageTest extends BaseTest {
         Assert.assertTrue(found);
     }
 
-    @Test(dependsOnMethods = "testCheckLevelPageHeaderName")
-    public void testCheckPremiumLevelPageIsClickable() {
+    @Test(dependsOnMethods = "testCheckLevelPageHeader")
+    public void testCheckPremiumLevelPage() {
         PremiumPage premiumPage = new PremiumPage(driverContainer);
 
         Assert.assertTrue(premiumPage.checkPremiumLevelPage());
     }
 
 
-    @Test(dependsOnMethods = "testCheckLevelPageHeaderName")
-    public void testCheckPremiumCashbackCategoriesListIsClickable() {
+    @Test(dependsOnMethods = "testCheckPremiumLevelPage")
+    public void testCheckPremiumCashbackCategoriesList() {
         PremiumPage premiumPage = new PremiumPage(driverContainer);
 
         Assert.assertTrue(premiumPage.checkPremiumCashbackCategoriesList());
     }
 
-    @Test(dependsOnMethods = "testCheckPremiumCashbackCategoriesListIsClickable")
-    public void testCheckPremiumCashbackPrivilegeIsClickable() {
+    @Test(dependsOnMethods = "testCheckPremiumCashbackCategoriesList")
+    public void testCheckPremiumCashbackPrivilege() {
         PremiumPage premiumPage = new PremiumPage(driverContainer);
 
         Assert.assertTrue(premiumPage.checkPremiumCashbackPrivilege());
     }
 
-    @Test(dependsOnMethods = "testCheckPremiumCashbackPrivilegeIsClickable")
-    public void testCheckPrivilegesBlocksIsDisplayed() {
+    @Test(dependsOnMethods = "testCheckPremiumCashbackPrivilege")
+    public void testCheckPrivilegesBlocks() {
         PremiumPage premiumPage = new PremiumPage(driverContainer);
 
-        Assert.assertTrue(premiumPage.checkPrivilegesBlocksIsDisplayed());
+        Assert.assertTrue(premiumPage.checkPrivilegesBlocks());
     }
 
 }
